--- a/games/valheim-hh.yaml
+++ b/games/valheim-hh.yaml
@@ -22,25 +22,34 @@ spec:
         image: docker-cache.tinker.haus/lloesche/valheim-server
         imagePullPolicy: Always
         ports:
-        - containerPort: 12456
+        - name: status
+          containerPort: 12458
+          protocol: TCP
+        - name: gameport
+          containerPort: 12456
           protocol: UDP
-        - containerPort: 12457
-          protocol: UDP
-        - containerPort: 12458
+        - name: queryport
+          containerPort: 12457
           protocol: UDP
         env:
-        - name: WORLD_NAME
-          value: "OmicronPersei8"
         - name: SERVER_NAME
+          value: "OmicronPersei8"
+        - name: SERVER_PORT
+          value: "12456"
+        - name: WORLD_NAME
           value: "OmicronPersei8"
         - name: SERVER_PASS
           value: ""
         - name: SERVER_PUBLIC
           value: "false"
-        - name: SERVER_PORT
-          value: "12456"
         - name: TZ
           value: "Europe/Bucharest"
+        - name: BACKUPS_MAX_AGE
+          value: "14"
+        - name: STATUS_HTTP
+          value: "true"
+        - name: STATUS_HTTP_PORT
+          value: "12458"
         volumeMounts:
           - name: config
             mountPath: /config
