--- a/games/valheim-chilled.yaml
+++ b/games/valheim-chilled.yaml
@@ -22,36 +22,39 @@ spec:
         image: docker-cache.tinker.haus/lloesche/valheim-server
         imagePullPolicy: Always
         ports:
-        - containerPort: 22456
+        - name: status
+          containerPort: 2458
+          protocol: TCP
+        - name: gameport
+          containerPort: 2456
           protocol: UDP
-        - containerPort: 22457
-          protocol: UDP
-        - containerPort: 22458
+        - name: queryport
+          containerPort: 2457
           protocol: UDP
         env:
-        - name: WORLD_NAME
-          value: "ChilledPeepsWorld"
         - name: SERVER_NAME
+          value: "ChilledPeeps"
+        - name: SERVER_PORT
+          value: "2456"
+        - name: WORLD_NAME
           value: "ChilledPeeps"
         - name: SERVER_PASS
           value: "%%VALHEIM_PASS%%"
         - name: SERVER_PUBLIC
-          value: "false"
-        - name: SERVER_PORT
-          value: "12456"
+          value: "true"
         - name: TZ
           value: "Europe/Bucharest"
+        - name: BACKUPS_MAX_AGE
+          value: "14"
+        - name: STATUS_HTTP
+          value: "true"
+        - name: STATUS_HTTP_PORT
+          value: "2458"
         volumeMounts:
           - name: config
             mountPath: /config
-          - name: server
-            mountPath: /opt/valheim
       volumes:
         - name: config
           hostPath:
             path: /var/srv/games/valheim-chilled/config
-            type: DirectoryOrCreate
-        - name: server
-          hostPath:
-            path: /var/srv/games/valheim-chilled/server
             type: DirectoryOrCreate
