Add external entrypoints to increase security

--- a/jenkins/50-jenkins.yaml
+++ b/jenkins/50-jenkins.yaml
@@ -155,6 +155,8 @@ spec:
   entryPoints:
     - web
     - websecure
+    - externalweb
+    - externalwebsecure
   routes:
     - match: Host(`kenjins.tinker.haus`)
       kind: Rule
