Download valheim server in storage

--- a/games/valheim-chilled.yaml
+++ b/games/valheim-chilled.yaml
@@ -53,8 +53,14 @@ spec:
         volumeMounts:
           - name: config
             mountPath: /config
+          - name: server
+            mountPath: /opt/valheim
       volumes:
         - name: config
           hostPath:
             path: /var/srv/games/valheim-chilled/config
+            type: DirectoryOrCreate
+        - name: server
+          hostPath:
+            path: /var/srv/games/valheim-chilled/server
             type: DirectoryOrCreate
