--- a/db/influxdb.yaml
+++ b/db/influxdb.yaml
@@ -1,13 +1,15 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
+  labels:
+    app: influxdb
   name: influxdb
-  namespace: homeautomation
+  namespace: db
 spec:
+  serviceName: influxdb
   selector:
     matchLabels:
       app: influxdb
-  replicas: 1
   template:
     metadata:
       labels:
@@ -16,19 +18,19 @@ spec:
       containers:
       - name: influxdb
         image: docker-cache.tinker.haus/library/influxdb:latest
-        #imagePullPolicy: Always
+        imagePullPolicy: Always
         ports:
         - containerPort: 8086
           protocol: TCP
-        - containerPort: 8089
-          protocol: UDP
+        env:
+          []
         volumeMounts:
           - name: influxdb2
             mountPath: /var/lib/influxdb2
       volumes:
         - name: influxdb2
           hostPath:
-            path: /var/srv/homeautomation/influxdb2
+            path: /var/srv/db/influxdb2
             type: DirectoryOrCreate
 
 ---
@@ -36,17 +38,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: influxdb
-  namespace: homeautomation
+  namespace: db
 spec:
   ports:
   - name: "influxdbtcp"
     port: 8086
     protocol: TCP
     targetPort: 8086
-  - name: "influxdbudp"
-    port: 8089
-    protocol: UDP
-    targetPort: 8089
   type: NodePort
   selector:
     app: influxdb
@@ -56,7 +54,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRouteTCP
 metadata:
   name: influxdb
-  namespace: homeautomation
+  namespace: db
 spec:
   entryPoints:
     - influxdb
@@ -68,26 +66,10 @@ spec:
 
 ---
 apiVersion: traefik.io/v1alpha1
-kind: IngressRouteUDP
-metadata:
-  name: ingressrouteudpinfluxdb
-  namespace: homeautomation
-spec:
-  entryPoints:
-    - influxdbudp
-  routes:
-  -  services:
-     - name: influxdb
-       port: 8089
-
-
-
----
-apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: influxdb
-  namespace: homeautomation
+  namespace: db
 spec:
   entryPoints:
     - web
