--- a/games/valheim-bestworld.yaml
+++ b/games/valheim-bestworld.yaml
@@ -1,9 +1,10 @@
 apiVersion: apps/v1
-kind: DaemonSet
+kind: StatefulSet
 metadata:
   name: valheim-best-seed
   namespace: games
 spec:
+  serviceName: valheim-best-seed
   selector:
     matchLabels:
       app: valheim-best-seed
