--- a/homeautomation/25-grafana.yaml
+++ b/homeautomation/25-grafana.yaml
@@ -15,8 +15,8 @@ spec:
     spec:
       containers:
       - name: grafana
-        image: docker-cache.tinker.haus/monitoringartist/grafana-xxl
-        #imagePullPolicy: Always
+        image: docker-cache.tinker.haus/grafana/grafana
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
         volumeMounts:
@@ -47,6 +47,7 @@ spec:
   type: NodePort
   selector:
     app: grafana
+    
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
