--- a/homeautomation/30-mosquitto.yaml
+++ b/homeautomation/30-mosquitto.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: DaemonSet
+kind: Deployment
 metadata:
   name: mosquitto
   namespace: homeautomation
@@ -15,12 +15,9 @@ spec:
       containers:
       - name: mosquitto
         image: docker-cache.tinker.haus/library/eclipse-mosquitto:latest
-        #imagePullPolicy: Always
+        imagePullPolicy: Always
         ports:
         - containerPort: 1883
-          hostPort: 1883
-        - containerPort: 9001
-          hostPort: 9001
         volumeMounts:
           - name: data
             mountPath: /mosquitto/data
@@ -41,3 +38,33 @@ spec:
           hostPath:
             path: /var/srv/homeautomation/mosquitto/log
             type: DirectoryOrCreate
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mosquitto
+  namespace: homeautomation
+spec:
+  ports:
+    - port: 1883
+      targetPort: 1883
+      protocol: TCP
+  type: NodePort
+  selector:
+    app: mosquitto
+
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRouteTCP
+metadata:
+  name: mosquitto
+  namespace: homeautomation
+spec:
+  entryPoints:
+    - mqtt
+  routes:
+  - match: HostSNI(`*`)
+    services:
+    - name: mosquitto
+      port: 1883
