--- a/homeautomation/80-nodered.yaml
+++ b/homeautomation/80-nodered.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: nodered
         image: docker-cache.tinker.haus/nodered/node-red
-        #imagePullPolicy: Always
+        imagePullPolicy: Always
         ports:
         - containerPort: 1880
         volumeMounts:
