--- a/middlewares/ipwhitelist.yaml
+++ b/middlewares/ipwhitelist.yaml
@@ -3,7 +3,7 @@ kind: Middleware
 metadata:
   name: ip-whitelist-local
 spec:
-  ipWhiteList:
+  ipAllowList:
     sourceRange:
       - 127.0.0.1/32
       - 10.0.0.0/8
