--- a/services/50-nut-http.yaml
+++ b/services/50-nut-http.yaml
@@ -21,7 +21,7 @@ spec:
         - containerPort: 3001
         env:
           - name: NUT_ADDRESS
-            value: "10.1.1.42"
+            value: "shallowthought.tinker.haus"
 
 ---
 apiVersion: v1
